--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "easy-peasy": "^5.0.4",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "react": "18.1.0",
