--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "first-next",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,11 +16,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "easy-peasy": "^5.0.4",
+    "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "three": "^0.142.0",
+    "vanta": "^0.5.22"
   },
   "devDependencies": {
     "eslint": "8.16.0",
